--- a/manifests/yamls/workflow.yaml
+++ b/manifests/yamls/workflow.yaml
@@ -27,7 +27,6 @@ spec:
             type: object
           spec:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
         required:
         - metadata
@@ -64,11 +63,9 @@ spec:
             type: object
           spec:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
           status:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
         required:
         - metadata
@@ -104,7 +101,6 @@ spec:
             type: object
           spec:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
         required:
         - metadata
@@ -150,11 +146,9 @@ spec:
             type: object
           spec:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
           status:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
         required:
         - metadata
@@ -191,7 +185,6 @@ spec:
             type: object
           spec:
             type: object
-            x-kubernetes-map-type: atomic
             x-kubernetes-preserve-unknown-fields: true
         required:
         - metadata
@@ -208,7 +201,7 @@ metadata:
 apiVersion: v1
 kind: ServiceAccount
 metadata:
-  name: argo-ui
+  name: argo-server
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: Role
@@ -411,8 +404,23 @@ rules:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
-  name: argo-ui-cluster-role
+  name: argo-server-cluster-role
 rules:
+- apiGroups:
+  - ""
+  resources:
+  - configmaps
+  verbs:
+  - get
+  - watch
+  - list
+- apiGroups:
+  - ""
+  resources:
+  - secrets
+  verbs:
+  - get
+  - create
 - apiGroups:
   - ""
   resources:
@@ -423,20 +431,40 @@ rules:
   - get
   - list
   - watch
+  - delete
 - apiGroups:
   - ""
   resources:
-  - secrets
+  - events
   verbs:
-  - get
+  - watch
+  - create
+  - patch
 - apiGroups:
-  - argoproj.io
+  - ""
   resources:
-  - workflows
+  - serviceaccounts
   verbs:
   - get
   - list
+- apiGroups:
+  - argoproj.io
+  resources:
+  - eventsources
+  - sensors
+  - workflows
+  - workfloweventbindings
+  - workflowtemplates
+  - cronworkflows
+  - clusterworkflowtemplates
+  verbs:
+  - create
+  - get
+  - list
   - watch
+  - update
+  - patch
+  - delete
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: RoleBinding
@@ -466,14 +494,14 @@ subjects:
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
-  name: argo-ui-binding
+  name: argo-server-binding
 roleRef:
   apiGroup: rbac.authorization.k8s.io
   kind: ClusterRole
-  name: argo-ui-cluster-role
+  name: argo-server-cluster-role
 subjects:
 - kind: ServiceAccount
-  name: argo-ui
+  name: argo-server
   namespace: argo
 ---
 apiVersion: v1
@@ -484,43 +512,71 @@ metadata:
 apiVersion: v1
 kind: Service
 metadata:
-  name: argo-ui
+  name: argo-server
 spec:
   ports:
-  - port: 80
-    targetPort: 8001
+  - name: web
+    port: 2746
+    targetPort: 2746
   selector:
-    app: argo-ui
+    app: argo-server
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: workflow-controller-metrics
+spec:
+  ports:
+  - name: metrics
+    port: 9090
+    protocol: TCP
+    targetPort: 9090
+  selector:
+    app: workflow-controller
 ---
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: argo-ui
+  name: argo-server
 spec:
   selector:
     matchLabels:
-      app: argo-ui
+      app: argo-server
   template:
     metadata:
       labels:
-        app: argo-ui
+        app: argo-server
     spec:
       containers:
-      - env:
-        - name: ARGO_NAMESPACE
-          valueFrom:
-            fieldRef:
-              apiVersion: v1
-              fieldPath: metadata.namespace
-        - name: IN_CLUSTER
-          value: "true"
-        - name: ENABLE_WEB_CONSOLE
-          value: "false"
-        - name: BASE_HREF
-          value: /
-        image: "quay.io/devtron/argoui:v3.1.7"
-        name: argo-ui
-      serviceAccountName: argo-ui
+      - args:
+        - server
+        image: argoproj/argocli:v3.0.10
+        name: argo-server
+        ports:
+        - containerPort: 2746
+          name: web
+        readinessProbe:
+          httpGet:
+            path: /
+            port: 2746
+            scheme: HTTPS
+          initialDelaySeconds: 10
+          periodSeconds: 20
+        securityContext:
+          capabilities:
+            drop:
+            - ALL
+        volumeMounts:
+        - mountPath: /tmp
+          name: tmp
+      nodeSelector:
+        kubernetes.io/os: linux
+      securityContext:
+        runAsNonRoot: true
+      serviceAccountName: argo-server
+      volumes:
+      - emptyDir: {}
+        name: tmp
 ---
 apiVersion: apps/v1
 kind: Deployment
@@ -540,10 +596,35 @@ spec:
         - --configmap
         - workflow-controller-configmap
         - --executor-image
-        - quay.io/argoproj/argoexec:v3.1.7
+        - argoproj/argoexec:v3.0.10
         command:
         - workflow-controller
-        image: "quay.io/argoproj/workflow-controller:v3.1.7"
+        env:
+        - name: LEADER_ELECTION_IDENTITY
+          valueFrom:
+            fieldRef:
+              apiVersion: v1
+              fieldPath: metadata.name
+        image: argoproj/workflow-controller:v3.0.10
+        livenessProbe:
+          failureThreshold: 3
+          httpGet:
+            path: /healthz
+            port: 6060
+          initialDelaySeconds: 90
+          periodSeconds: 60
+          timeoutSeconds: 30
         name: workflow-controller
+        ports:
+        - containerPort: 9090
+          name: metrics
+        - containerPort: 6060
+        securityContext:
+          capabilities:
+            drop:
+            - ALL
+      nodeSelector:
+        kubernetes.io/os: linux
+      securityContext:
+        runAsNonRoot: true
       serviceAccountName: argo
-
