--- a/manifests/yamls/devtron.yaml
+++ b/manifests/yamls/devtron.yaml
@@ -50,6 +50,7 @@ data:
   CD_REQ_CI_CPU: "0.5"
   CD_REQ_CI_MEM: "1G"
   CD_NODE_TAINTS_KEY: ""
+  CD_NODE_LABEL_SELECTOR: ""
   CD_WORKFLOW_SERVICE_ACCOUNT: "cd-runner"
   DEFAULT_BUILD_LOGS_KEY_PREFIX: "devtron"
   DEFAULT_CD_ARTIFACT_KEY_LOCATION: "devtron/cd-artifacts"
