updates override files with prod configs

--- a/manifests/updates/devtron-external-secret-override.yaml
+++ b/manifests/updates/devtron-external-secret-override.yaml
@@ -15,9 +15,12 @@ data:
           spec:
             containers:
             - resources:
+                limits:
+                  cpu: 0.01
+                  memory: 100Mi
                 requests:
-                  cpu: 10m
-                  memory: 10Mi
+                  cpu: 0.01
+                  memory: 100Mi
 #              env:
 #              - name: "LOG_LEVEL"
 #                value: "info"
