--- a/manifests/updates/devtron-grafana-override.yaml
+++ b/manifests/updates/devtron-grafana-override.yaml
@@ -25,7 +25,10 @@ data:
           spec:
             containers:
             - resources:
+                limits:
+                  cpu: 0.02
+                  memory: 200Mi
                 requests:
-                  cpu: 30m
-                  memory: 100Mi
+                  cpu: 0.02
+                  memory: 200Mi
 
