--- a/manifests/updates/devtron-nats-operator-override.yaml
+++ b/manifests/updates/devtron-nats-operator-override.yaml
@@ -16,8 +16,8 @@ data:
             containers:
             - resources:
                 limits:
-                  cpu: 5m
-                  memory: 20Mi
+                  cpu: 0.01
+                  memory: 30Mi
                 requests:
-                  cpu: 3m
-                  memory: 10Mi
+                  cpu: 0.01
+                  memory: 30Mi
