--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: devtron-labs/git-repo-sync@v0.1.1
+    - uses: pawan-59/git-repo-sync@v0.1.18
       with:
         target-url: 'https://gitee.com/devtron-labs/devtron.git'
-        target-username: 'pawan_06d2'
+        target-username: 'prakarsh'
         target-token: ${{ secrets.GITEE_ACCESS_TOKEN }}
