--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -18,7 +18,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: pawan-59/git-sync@v0.1.1
+    - uses: devtron-labs/git-repo-sync@v0.1.3
       with:
         target-url: ${{ secrets.TARGET_URL }}
         target-username: ${{ secrets.USER_NAME }}
