--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -15,8 +15,8 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: pawan-59/git-repo-sync@v0.1.18
+    - uses: devtron-labs/git-repo-sync@v0.1.4
       with:
-        target-url: 'https://gitee.com/devtron-labs/devtron.git'
-        target-username: 'prakarsh'
+        target-url: ${{ secrets.TARGET_URL }}
+        target-username: ${{ secrets.TARGET_USER_NAME }}
         target-token: ${{ secrets.GITEE_ACCESS_TOKEN }}
