--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -3,9 +3,7 @@ name: sync3
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-  pull_request:
+  release:
     branches: [ main ]
 
 
@@ -18,7 +16,7 @@ jobs:
     - uses: actions/checkout@v2
       with:
         fetch-depth: 0
-    - uses: devtron-labs/git-repo-sync@v0.1.3
+    - uses: pawan-59/git-repo-sync@v0.1.18
       with:
         target-url: ${{ secrets.TARGET_URL }}
         target-username: ${{ secrets.USER_NAME }}
