--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -3,7 +3,7 @@ name: sync3
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  release:
+  push:
     branches: [ main ]
 
 
