--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -3,9 +3,7 @@ name: sync3
 # Controls when the workflow will run
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
-  push:
-    branches: [ main ]
-
+  release:
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
