--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -4,7 +4,7 @@ name: sync3
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   release:
-    types: [published, created]
+    types: [published]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
