--- a/.github/workflows/sync2.yml
+++ b/.github/workflows/sync2.yml
@@ -5,6 +5,8 @@ on:
   # Triggers the workflow on push or pull request events but only for the main branch
   release:
     types: [released]
+  push:
+    branches: [ main ]
 
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
