--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -2,7 +2,7 @@
 {{ $svcPort := (index .Values.ContainerPort 0).servicePort }}
 {{- if $.Values.ingress.enabled -}}
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template ".Chart.Name .fullname" . }}-ingress
@@ -24,9 +24,11 @@ spec:
       http:
         paths:
           - path: {{ .Values.ingress.path }}
-            backend:
-              serviceName: {{ $svcName }}
-              servicePort: {{ $svcPort }}
+            defaultBackend:
+              service:
+                name: {{ $svcName }}
+                port:
+                  number: {{ $svcPort }}
   {{- end }}
   {{- range .Values.ingress.hosts }}
     - host: {{ .host | quote }}
@@ -34,9 +36,11 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
-            backend:
-              serviceName: {{ $svcName }}
-              servicePort: {{ $svcPort }}
+            defaultBackend:
+              service:
+                name: {{ $svcName }}
+                port:
+                  number: {{ $svcPort }}
         {{- end }}
   {{- end }}
   {{- if .Values.ingress.tls }}
@@ -46,7 +50,7 @@ spec:
 {{- end }}
 {{- if $.Values.ingressInternal.enabled }}
 ---
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   name: {{ template ".Chart.Name .fullname" . }}-ingress-internal
@@ -68,9 +72,11 @@ spec:
       http:
         paths:
           - path: {{ .Values.ingressInternal.path }}
-            backend:
-              serviceName: {{ $svcName }}
-              servicePort: {{ $svcPort }}
+            defaultBackend:
+              service:
+                name: {{ $svcName }}
+                port:
+                  number: {{ $svcPort }}
   {{- end }}
   {{- range .Values.ingressInternal.hosts }}
     - host: {{ .host | quote }}
@@ -78,9 +84,11 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
-            backend:
-              serviceName: {{ $svcName }}
-              servicePort: {{ $svcPort }}
+            defaultBackend:
+              service:
+                name: {{ $svcName }}
+                port:
+                  number: {{ $svcPort }}
         {{- end }}
   {{- end }}
   {{- if .Values.ingressInternal.tls }}
