updated ingress.yaml as pathType is required field

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/ingress.yaml
@@ -24,6 +24,7 @@ spec:
       http:
         paths:
           - path: {{ .Values.ingress.path }}
+            pathType: Prefix
             defaultBackend:
               service:
                 name: {{ $svcName }}
@@ -36,6 +37,7 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
+            pathType: Prefix
             defaultBackend:
               service:
                 name: {{ $svcName }}
@@ -72,6 +74,7 @@ spec:
       http:
         paths:
           - path: {{ .Values.ingressInternal.path }}
+            pathType: Prefix
             defaultBackend:
               service:
                 name: {{ $svcName }}
@@ -84,6 +87,7 @@ spec:
         paths:
         {{- range .paths }}
           - path: {{ . }}
+            pathType: Prefix
             defaultBackend:
               service:
                 name: {{ $svcName }}
