added initContainer resources field

--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/deployment.yaml
@@ -97,6 +97,10 @@ spec:
           command:
 {{ toYaml .command | indent 12 -}}
 {{- end}}
+{{- if .resources}}
+          resources:
+{{ toYaml .resources | indent 12 -}}
+{{- end}}
 {{- if .volumeMounts}}
           volumeMounts:
 {{ toYaml .volumeMounts | indent 12 -}}
