Added Environment vlariable fieldRef/fieldPath support

--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/deployment.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/templates/deployment.yaml
@@ -162,6 +162,12 @@ spec:
               valueFrom:
                 fieldRef:
                   fieldPath: metadata.name
+          {{- range $.Values.EnvVariablesFromFieldPath }}
+            - name: {{ .name }}
+              valueFrom:
+                fieldRef:
+                 fieldPath: {{ .fieldPath }}
+          {{- end}}
           {{- range $.Values.EnvVariables }}
             - name: {{ .name}}
               value: {{ .value | quote }}
