--- a/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_4-10-0/values.yaml
@@ -77,6 +77,9 @@ server:
    image_tag: 1-95af053
    image: ""
 
+EnvVariablesFromFieldPath:
+- name: POD_NAME
+  fieldPath: metadata.name
 
 EnvVariables:
   - name: FLASK_ENV
