--- a/manifests/yamls/devtron.yaml
+++ b/manifests/yamls/devtron.yaml
@@ -152,7 +152,7 @@ spec:
       serviceAccountName: devtron
       containers:
         - name: devtron
-          image: "quay.io/devtron/devtron:12121212121"
+          image: "quay.io/devtron/devtron:c174210f-4-5302"
           imagePullPolicy: IfNotPresent
           ports:
             - name: devtron
