updated release type in sync.yml

--- a/.github/workflows/sync.yml
+++ b/.github/workflows/sync.yml
@@ -4,8 +4,7 @@ name: sync
 on:
   # Triggers the workflow on push or pull request events but only for the main branch
   release:
-    branches: [ main ]
-
+    types: [released]
 # A workflow run is made up of one or more jobs that can run sequentially or in parallel
 jobs:
   sync:
