--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
@@ -76,6 +76,7 @@ data:
             "type": "STATIC",
             "connect_timeout": "0.250s",
             "lb_policy": "ROUND_ROBIN",
+            "max_requests_per_connection": "1",
 {{- if $element.idleTimeout }}
             "common_http_protocol_options": {
               "idle_timeout": {{ $element.idleTimeout | quote }}
