--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
@@ -76,7 +76,6 @@ data:
             "type": "STATIC",
             "connect_timeout": "0.250s",
             "lb_policy": "ROUND_ROBIN",
-            "max_requests_per_connection": "1",
 {{- if $element.idleTimeout }}
             "common_http_protocol_options": {
               "idle_timeout": {{ $element.idleTimeout | quote }}
@@ -84,6 +83,12 @@ data:
 {{- end }}
 {{- if or $element.useHTTP2 $element.useGRPC }}
             "http2_protocol_options": {},
+{{- end }}
+{{- if not $element.useGRPC }}
+            "max_requests_per_connection": "1",
+{{- end }}
+{{- if not $element.supportStreaming }}
+            "max_requests_per_connection": "1",
 {{- end }}
             "load_assignment": {
               "cluster_name": "9",
