--- a/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
+++ b/scripts/devtron-reference-helm-charts/reference-chart_3-12-0/templates/sidecar-configmap.yaml
@@ -84,10 +84,7 @@ data:
 {{- if or $element.useHTTP2 $element.useGRPC }}
             "http2_protocol_options": {},
 {{- end }}
-{{- if not $element.useGRPC }}
-            "max_requests_per_connection": "1",
-{{- end }}
-{{- if not $element.supportStreaming }}
+{{- if and (not $element.useGRPC) (not $element.supportStreaming) }}
             "max_requests_per_connection": "1",
 {{- end }}
             "load_assignment": {
