Updated Micro-Services for 1.22

--- a/manifests/yamls/lens.yaml
+++ b/manifests/yamls/lens.yaml
@@ -182,7 +182,7 @@ spec:
     app: lens
 ---
 # Source: lens/templates/hpa.yaml
-apiVersion: autoscaling/v2beta1
+apiVersion: autoscaling/v2beta2
 kind: HorizontalPodAutoscaler
 metadata:
  name: lens-hpa
@@ -196,12 +196,16 @@ spec:
  metrics:
    - type: Resource
      resource:
-       name: memory
-       targetAverageUtilization: 90
+        name: memory
+        target:
+          type: Utilization
+          averageUtilization: 90
    - type: Resource
      resource:
-       name: cpu
-       targetAverageUtilization: 80
+        name: cpu
+        target:
+          type: Utilization
+          averageUtilization: 80
 ---
 # Source: lens/templates/deployment.yaml
 apiVersion: apps/v1
