--- a/manifests/yamls/devtron-ingress.yaml
+++ b/manifests/yamls/devtron-ingress.yaml
@@ -1,4 +1,4 @@
-apiVersion: extensions/v1beta1
+apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
   labels:
@@ -10,10 +10,16 @@ spec:
   - http:
       paths:
       - backend:
-          serviceName: devtron-service
-          servicePort: 80
+          service:
+            name: devtron-service
+            port:
+              number: 80
         path: /orchestrator
+        pathType: ImplementationSpecific 
       - backend:
-          serviceName: devtron-service
-          servicePort: 80
+          service:
+            name: devtron-service
+            port:
+              number: 80
         path: /dashboard
+        pathType: ImplementationSpecific
