--- a/.github/ISSUE_TEMPLATE/bug.yaml
+++ b/.github/ISSUE_TEMPLATE/bug.yaml
@@ -99,7 +99,7 @@ body:
       label: "👀 Have you spent some time to check if this issue has been raised before?"
       description: "Have you Googled for a similar issue or checked our older issues for a similar bug?"
       options:
-        - label: "I checked and didn't find similar issue"
+        - label: "I checked and didn't find any similar issue"
           required: true
   - type: checkboxes
     id: read-code-of-conduct
