--- a/scripts/devtron-reference-helm-charts/cronjob-chart_1-0-0/Chart.yaml
+++ b/scripts/devtron-reference-helm-charts/cronjob-chart_1-0-0/Chart.yaml
@@ -1,5 +1,5 @@
 apiVersion: v1
 appVersion: "1.0"
 description: A Helm chart for Kubernetes
-name: cronjob-chart-1-0-0
-version: 3.12.0
+name: cronjob-chart_1-0-0
+version: 1.0.0
